--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,26 @@ position: static;
 }
 
 
+}
+
+
+@import url('https://fonts.googleapis.com/css? family=Poppins:400,500,700');
+
+*, *::before, *::after{
+    box-sizing: border-box;
+}
+
+
+.bottombar{
+    background-color:#680021;;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+    position: static;
+    width: 100%;
+}
+
 
 
 
