--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,30 @@ position: static;
     width: 100%;
 }
 
+.bottombar, footer ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: static;
+
+
+}
+
+.bottombar, footer ul li {
+    display: inline;
+    position: static;
+    
+}
+
+.bottombar, footer ul li a {
+    color: white;
+    text-decoration:none;
+    float: right;
+    padding: 14px 16px;   
+    position: static; 
+}
+
+
 
 
 
