--- a/styles.css
+++ b/styles.css
@@ -31,5 +31,24 @@ position: static;
 }
 
 
+.logo{
+    height: 16px;
+    width: 14px;
+    /* display: inline;
+    position: static; */  
+}
+
+
+.logoname{
+    margin-left: 1rem; 
+    color: white;
+    font-style: Zapf-Chancery, italic;
+}
+
+.brand-logo{
+    display: flex;
+}
+
+
 
 
