--- a/styles.css
+++ b/styles.css
@@ -94,5 +94,39 @@ position: static;
 }
 
 
+.container1, .name, .name1, .work{
+    color: white;
+    padding-left: 10px;
+    border-right: 10px;
+    text-align: center;
+}
+
+.name{
+    font-size: 20px;
+    font-weight: 60px;
+    border-bottom: 10px;
+}
+
+
+
+.name{
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    margin-top: 100px;
+    padding-bottom: 100px;
+    height: 10vh;
+  }
+
+
+  .name{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
+
 
 
